Working on #374