@@ -9,10 +9,6 @@
 	</parent>
 	<artifactId>moneta-convert-ecb</artifactId>
 	<packaging>jar</packaging>
-	<properties>
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
-	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.javamoney.moneta</groupId>
@@ -74,6 +70,16 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M7</version>
+				<configuration>
+					<argLine>--illegal-access=permit</argLine>
+					<argLine>--add-opens org.javamoney.moneta.convert.ecb/org.javamoney.moneta.convert.ecb=ALL-UNNAMED</argLine>
+					<argLine>-Dillegal-access=permit</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
